# efsora-customer-portal

./: .env.example  .gitignore  API_TESTS_FIX.md  CLAUDE.md  ENVIRONMENT_QUICK_START.md  ENV_SETUP.md  FIX_DATABASE.sh  JWT_COOKIE_MIGRATION_PLAN.md  Makefile  QASE_ENV_SETUP.md  QASE_FINAL_FIX_SUMMARY.md  QASE_FIX_SUMMARY.md  QUICK_FIX.md  README.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  package-lock.json  package.json
.claude/: .claude.json  MIGRATION_NOTES.md  QASE_SETUP_TROUBLESHOOTING.md  QASE_SYNC_READY.md  README.md  SYNC_COMPLETE.md  SYNC_QASE_IMPLEMENTATION.md
.claude/commands/: sync-qase-metadata.md
.claude/docs/: qase-integration.md  test-metadata-guide.md
.claude/scripts/: auto-sync-qase.js  execute-sync.js  sync-qase.js  sync-qase.ts
.claude/skills/: generate-e2e-test.md  generate-page-object.md  qase-io-integration.md  test-naming-conventions.md
ai/: .pre-commit-config.yaml  Dockerfile.dev  docker-compose.yml
ai-service/: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
ai-service/scripts/: docker-entrypoint.sh
ai-service/src/app/: embed_documents.py  main.py
ai-service/src/app/api/: dependencies.py
ai-service/src/app/api/schemas/: errors.py  request.py  response.py
ai-service/src/app/api/v1/: chat_routes.py  routes.py  weaviate_routes.py
ai-service/src/app/core/: settings.py
ai-service/src/app/db_ops/: weaviate_db_ops.py
ai-service/src/app/dependency_injection/: container.py
ai-service/src/app/domain/: extract_images.py  extract_table.py  ingestion_operations.py
ai-service/src/app/infrastructure/db/: engine.py  utils.py
ai-service/src/app/infrastructure/s3/: __init__.py  client.py
ai-service/src/app/infrastructure/weaviate/: client.py  collection.py
ai-service/src/app/middleware/: logging.py
ai-service/src/app/scripts/: embed_documents.py
ai-service/src/app/services/: document_embedding_service.py  rag_service.py  weaviate_service.py
ai-service/src/app/utils/: file_utils.py
ai-service/tests/: __init__.py  conftest.py
ai-service/tests/ragas/: AWS_SETUP.md  RAG_API_REQUIREMENTS.md  README.md  __init__.py  conftest.py  test_rag_lexical.py  test_rag_llm_judged.py  test_rag_real_semantic.py  test_rag_real_traditional.py
ai-service/tests/ragas/fixtures/: __init__.py  lexical_data.py  llm_judged_data.py  real_semantic_data.py  real_traditional_data.py
ai-service/tests/unit/: test_base_response.py  test_routes.py
ai/tests/: conftest.py
backend/: .env.development  .env.example  .gitignore  CLAUDE.md  DEMO_DATA.md  Makefile  README.md  eslint-local-rules.js  eslint.config.js  package-lock.json  package.json  vitest.config.js
backend/_docs/: openapi.json
backend/docker/: Dockerfile
backend/scripts/: docker-entrypoint.sh  generate-openapi.ts  run-migrations.ts  seed-data.ts  seed-demo-data.ts
backend/src/: index.ts  instrumentation.ts
backend/src/db/: client.ts  schema.ts
backend/src/middlewares/: auth.ts  effectHandler.ts  errorHandler.ts  requestLogger.ts  resultHandler.ts  sseHandler.ts  validate.ts
backend/src/openapi/: generate.ts
backend/src/routes/: index.ts
backend/tests/: global-setup.ts  setup.ts
backend/tests/fixtures/: setup.ts
backend/tests/helpers/: database.ts  invitation.ts
backend/tests/integration/: auth.test.ts  companies.test.ts  create-user.test.ts  events.test.ts  generate-upload-url.test.ts  get-your-team.test.ts  logout.test.ts  milestones.test.ts  projects.test.ts  send-invitation.test.ts  session-management.test.ts  user-assignments.test.ts  user-profile.test.ts
frontend/: Dockerfile  Dockerfile.dev  FRONTEND_IMPROVEMENT_PLAN.md  Makefile  README.md  TEST_ID_REFERENCE.md  eslint.config.js  i18n.ts  package-lock.json  package.json  schema.d.ts  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/api/: api.ts  axios.ts  (+4 more)
scripts/: test-embed.sh
shared/contracts/: backend-ai-api.yaml  frontend-backend-api.yaml
test/: .dockerignore  .env.docker  .env.example  .eslintrc.json  .gitignore  .prettierignore  API_TESTS_GUIDE.md  CLAUDE.md  CONTRIBUTING.md  DEBUGGING_500_ERRORS.md  DOCKER_GUIDE.md  Dockerfile  QASE_LOGGING_GUIDE.md  QASE_SETUP.md  README.md  cypress.config.ts  docker-compose.yml  eslint.config.js  package-lock.json  package.json  run-docker-tests.sh  run-tests.sh  sync-metadata.mjs  sync-qase.js  test-qase-debug.js  test-qase-token.js  tsconfig.json  verify-qase-setup.js  verify-qase.js
test/.claude/: settings.json
test/cypress/: README_E2E_TESTING.md
test/scripts/: create-test-cases-auto.js  delete-all-test-cases.js  patch-qase-reporter.js  qase-result-submitter.js  sync-qase-metadata.ts
(+395 files in other folders)
